Remove Java 8 code